--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -105,8 +105,17 @@ body
       height: 950px
       position: absolute
       top: 0
-      right: 13.5%
+      right: 21.5%
       animation: 7s zoomPers ease-in-out infinite
+      img
+        height: 114%
+    &-bird
+      height: 518px
+      position: absolute
+      bottom: 0
+      right: -10px
+      transform-origin: right center
+      animation: 7s zoomBird ease-in-out infinite
       img
         height: 114%
     &-bg
@@ -202,6 +211,16 @@ body
         margin-top: 5px
 
 @keyframes zoomPers
+  0%
+    transform: scale(1)
+  50%
+    transform: scale(1.1)
+  60%
+    transform: scale(1.1)
+  100%
+    transform: scale(1)
+
+@keyframes zoomBird
   0%
     transform: scale(1)
   50%
