--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -5,20 +5,21 @@
     .brand__main-left
       .brand__main-slogan
         .first-line
-          p Lov na rijetke ptice je uzbudljiv
+          p Lov na rijetke
+          p ptice je uzbudljiv
         .second-line
           p kao #[span igranje] u Favbetu
       a(href="#").brand__main-btn Kladi se
     picture.brand__main-pers
-      source(media="(max-width: 600px) and (orientation: portrait)" srcset="img/pers-desk.png")
-      source(media="(max-width: 920px) and (orientation: landscape) and (max-height: 450px)" srcset="img/pers-mob.png")
+      source(media="(max-width: 600px) and (orientation: portrait)" srcset="img/pers-mob.png")
+      source(media="(max-width: 920px) and (orientation: landscape) and (max-height: 450px)" srcset="img/pers-desk.png")
       source(media="(min-width: 601px) and (max-width: 1024px) and (orientation: portrait)" srcset="img/pers-tab.png")
       source(media="(min-width: 601px) and (orientation: landscape)" srcset="img/pers-desk.png")
       img(src="img/pers-desk.png" alt="Favbet")
     picture.brand__main-bird
-      source(media="(max-width: 600px) and (orientation: portrait)" srcset="img/bird-desc.png")
-      source(media="(max-width: 920px) and (orientation: landscape) and (max-height: 450px)" srcset="img/bird-mob.png")
-      source(media="(min-width: 601px) and (max-width: 1024px) and (orientation: portrait)" srcset="img/bird-tab.png")
+      source(media="(max-width: 600px) and (orientation: portrait)" srcset="img/bird-mob.png")
+      source(media="(max-width: 920px) and (orientation: landscape) and (max-height: 450px)" srcset="img/bird-desc.png")
+      source(media="(min-width: 601px) and (max-width: 770px) and (orientation: portrait)" srcset="img/bird-tab.png")
       source(media="(min-width: 601px) and (orientation: landscape)" srcset="img/bird-desc.png")
       img(src="img/bird-desc.png" alt="Favbet")
     .brand__main-bg
