--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -10,6 +10,9 @@
         transform-origin: left bottom
       &-pers
         height: 1260px
+      &-bird
+        height: 548px
+        top: 48%
     &__footer
       height: 170px
       &-bonus
@@ -19,7 +22,34 @@
         transform: scale(1.3)
         transform-origin: right
 
-@media screen and (min-width: 2200px)
+@media screen and (min-width: 2000px) and (max-height: 1170px)
+  .brand
+    &__main
+      &-pers
+        height: 1170px
+      &-bird
+        height: 578px
+        top: 51%
+
+@media screen and (min-width: 2000px) and (max-height: 1090px)
+  .brand
+    &__main
+      &-pers
+        height: 1030px
+      &-bird
+        height: 578px
+        top: 50%
+
+@media screen and (min-width: 2000px) and (max-height: 1045px)
+  .brand
+    &__main
+      &-pers
+        height: 970px
+      &-bird
+        height: 578px
+        top: 50%
+
+@media screen and (min-width: 2290px)
   .brand
     &__main
       &-logo
@@ -27,13 +57,22 @@
       &-left
         transform: scale(1.1)
       &-pers
-        height: 1080px
+        height: 1280px
+      &-bird
+        height: 738px
+        top: 45%
     &__footer
       height: 130px
       &-bonus
         transform: scale(1.05)
       &-payment
         transform: scale(1.1)
+
+@media screen and (max-width: 1925px) and (max-height: 950px)
+  .brand
+    &__main
+      &-bird
+        height: 456px
 
 @media screen and (max-width: 1830px)
   .brand
@@ -57,7 +96,10 @@
       &-logo
         max-width: 350px
       &-pers
-        height: 830px
+        height: 920px
+      &-bird
+        height: 470px
+        top: 49%
     &__footer
       &-bonus
         &-item
@@ -106,17 +148,35 @@
         transform: scale(.83)
         transform-origin: left bottom
       &-pers
-        height: 790px
+        height: 840px
+      &-bird
+        height: 450px
+        top: 48%
+
+@media screen and (max-width: 1600px) and (max-height: 800px)
+  .brand
+    &__main
+      &-pers
+        height: 770px
+      &-bird
+        height: 425px
+        top: 48%
 
 @media screen and (max-width: 1536px)
   .brand
     &__main
       &-pers
-        height: 760px
-        right: 13.2%
+        height: 800px
+        right: 23.2%
     &__footer
       &-payment
         max-width: 300px
+
+@media screen and (max-width: 1536px) and (max-height: 800px)
+  .brand
+    &__main
+      &-pers
+        height: 770px
 
 @media screen and (max-width: 1464px)
   .brand
@@ -130,11 +190,22 @@
   .brand
     &__main
       &-pers
-        height: 720px
+        height: 800px
+      &-bird
+        top: 46%
     &__footer
       &-bonus
         &-txt
           font-size: 19px
+
+@media screen and (max-width: 1440px) and (max-height: 800px)
+  .brand
+    &__main
+      &-pers
+        right: 21.2%
+      &-bird
+        height: 380px
+        top: 49%
 
 @media screen and (max-width: 1368px)
   .brand
@@ -143,7 +214,10 @@
         transform: scale(0.77)
       &-pers
         height: 790px
-        right: 7.2%
+        right: 16.2%
+      &-bird
+        height: 460px
+        top: 45%
     &__footer
       &-bonus
         &-item
@@ -181,8 +255,7 @@
   .brand
     &__main
       &-pers
-        height: 790px
-        right: 8.2%
+        height: 830px
         top: -20px
     &__footer
       height: 100px
@@ -192,7 +265,8 @@
     &__main
       &-pers
         height: 760px
-        right: 10.2%
+      &-bird
+        height: 430px
 
 @media screen and (max-width: 1366px) and (max-height: 768px)
   .brand
@@ -204,16 +278,29 @@
       &-pers
         top: 0
         height: 690px
-        right: 12.6%
+        right: 23.6%
+      &-bird
+        height: 390px
     &__footer
       height: 80px
+
+@media screen and (max-width: 1366px) and (max-height: 670px)
+  .brand
+    &__main
+      &-bird
+        height: 350px
+        top: 49%
+      &-pers
+        right: 20.6%
 
 @media screen and (max-width: 1300px) and (min-height: 1000px)
   .brand
     &__main
       &-pers
-        height: 790px
-        right: 4.6%
+        height: 815px
+        right: 15.6%
+      &-bird
+        right: -60px
 
 @media screen and (max-width: 1280px)
   .brand
@@ -225,18 +312,45 @@
         left: 20px
         bottom: 30px
       &-pers
-        height: 640px
-        right: 13%
+        height: 710px
+        right: 23%
         top: 0
+      &-bird
+        height: 370px
+        top: 47%
     &__footer
       height: 80px
+
+@media screen and (max-width: 1280px) and (max-height: 660px)
+  .brand
+    &__main
+      &-pers
+        height: 630px
+        right: 24%
+      &-bird
+        height: 368px
+        top: 49%
+
+@media screen and (max-width: 1280px) and (max-height: 590px)
+  .brand
+    &__main
+      &-pers
+        height: 590px
+        right: 21%
+      &-bird
+        height: 318px
+        top: 53%
 
 @media screen and (max-width: 1260px) and (min-height: 1000px)
   .brand
     &__main
       &-pers
-        height: 830px
+        height: 860px
         right: 1.3%
+        left: -150px
+      &-bird
+        height: 480px
+        top: 45%
 
 @media screen and (max-width: 1205px)
   .brand
@@ -244,7 +358,7 @@
       &-left
         transform: scale(.66)
       &-pers
-        height: 600px
+        height: 670px
     &__footer
       &-payment
         max-width: 230px
@@ -253,16 +367,15 @@
   .brand
     &__main
       &-pers
-        height: 680px
-        right: 8%
-        top: -10px
+        height: 690px
+        right: 18%
 
 @media screen and (max-width: 1150px)
   .brand
     &__main
       &-pers
-        height: 580px
-        right: 12.2%
+        height: 680px
+        right: 17.2%
     &__footer
       height: 70px
       &-bonus
@@ -299,18 +412,19 @@
   .brand
     &__main
       &-pers
-        height: 670px
-        right: 5.7%
+        height: 680px
+        right: 15.7%
         top: 0
+
 
 @media screen and (max-width: 1120px) and (max-height: 800px)
   .brand
     &__main
       &-pers
-        height: 620px
-        right: 9%
+        height: 650px
+        right: 18%
 
-@media screen and (max-width: 1050px)
+@media screen and (max-width: 1070px)
   .brand
     &__main
       &-logo
@@ -320,29 +434,57 @@
       &-pers
         height: 670px
         right: 2.5%
+        left: -140px
+      &-bird
+        height: 410px
+        top: 41%
+        right: -60px
 
 @media screen and (max-width: 1024px) and (max-height: 768px)
   .brand
     &__main
       &-pers
-        height: 630px
-        right: 5%
-        top: -20px
+        height: 670px
+        right: 17%
+        left: -160px
 
 @media screen and (max-width: 1024px) and (max-height: 730px)
   .brand
     &__main
       &-pers
-        height: 640px
-        right: 6%
-        top: -30px
+        height: 650px
+      &-bird
+        height: 360px
+        top: 47%
 
 @media screen and (max-width: 1024px) and (max-height: 670px)
   .brand
     &__main
       &-pers
-        height: 600px
-        right: 8%
+        height: 620px
+      &-bird
+        height: 360px
+        top: 47%
+
+
+
+@media screen and (max-width: 970px) and (orientation: landscape)
+  .brand
+    &__main
+      &-pers
+        left: -274px
+
+@media screen and (max-width: 970px) and (orientation: landscape) and (max-height: 715px)
+  .brand
+    &__main
+      &-pers
+        left: -184px
+
+@media screen and (max-width: 920px) and (orientation: landscape)
+  .brand
+    &__main
+      &-bird
+        right: -130px
 
 @media screen and (max-width: 1024px) and (orientation: portrait)
   .brand
@@ -355,9 +497,17 @@
         left: 40px
         bottom: 40px
       &-pers
-        top: 90px
+        top: 0
         height: 1030px
-        right: -17%
+        right: auto
+        left: 0
+        img
+          max-width: none
+          height: 100%
+      &-bird
+        right: -250px
+        height: 670px
+        top: 36%
         img
           max-width: none
           height: 100%
@@ -412,6 +562,14 @@
         max-width: 275px
         margin-top: -10px
 
+@media screen and (max-width: 1024px) and (orientation: portrait) and (min-height: 1300px)
+  .brand
+    &__main
+      &-bird
+        top: 42%
+      &-pers
+        height: 1140px
+
 @media screen and (max-width: 834px) and (orientation: portrait)
   .brand
     &__main
@@ -420,9 +578,17 @@
       &-left
         transform: scale(.8)
       &-pers
-        top: 70px
-        height: 860px
-        right: -17%
+        height: 970px
+      &-bird
+        right: -310px
+        height: 521px
+        top: 45%
+
+@media screen and (max-width: 834px) and (orientation: portrait) and (min-height: 1100px)
+  .brand
+    &__main
+      &-pers
+        height: 1020px
 
 @media screen and (max-width: 768px) and (orientation: portrait)
   .brand
@@ -430,9 +596,19 @@
       &-left
         transform: scale(.75)
       &-pers
-        top: 60px
-        height: 760px
-        right: -16%
+        top: 0
+        height: 875px
+        right: 0
+      &-bird
+        right: 0
+        height: 521px
+        top: 45%
+
+@media screen and (max-width: 768px) and (orientation: portrait) and (min-height: 1000px)
+  .brand
+    &__main
+      &-pers
+        height: 905px
 
 @media screen and (max-width: 712px) and (orientation: portrait)
   .brand
@@ -441,9 +617,7 @@
         left: 20px
         bottom: 30px
       &-pers
-        top: 50px
-        height: 720px
-        right: -18%
+        height: 845px
     &__footer
       padding: 0 10px
       &-bonus
@@ -474,6 +648,9 @@
           100%
             transform: scale(1) translateX(0)
       &-slogan
+        .first-line
+          flex-direction: column
+          align-items: flex-start
         p
           font-size: 21px
           line-height: 21px
@@ -486,9 +663,12 @@
         text-align: center
         margin-top: 20px
       &-pers
-        top: 90px
+        top: 0
         height: 630px
-        right: -34%
+        right: 0
+      &-bird
+        height: 521px
+        top: 36%
       &-bg
         background-position-y: -50px
     &__footer
@@ -540,18 +720,16 @@
   .brand
     &__main
       &-pers
-        top: 80px
-        height: 640px
-        right: -38%
+        height: 700px
+        right: 0
 
 @media screen and (max-width: 414px) and (orientation: portrait) and (max-height: 800px)
   .brand
     &__main
       padding-bottom: 20px
       &-pers
-        top: 85px
-        height: 605px
-        right: -34.5%
+        height: 625px
+        right: 0
     &__footer
       height: 155px
       padding-top: 18px
@@ -563,9 +741,8 @@
   .brand
     &__main
       &-pers
-        top: 75px
-        height: 590px
-        right: -37%
+        height: 640px
+        right: 0
 
 @media screen and (max-width: 393px) and (orientation: portrait) and (max-height: 700px)
   .brand
@@ -577,8 +754,7 @@
         line-height: 17px
         margin-top: 15px
       &-pers
-        height: 570px
-        right: -34.5%
+        height: 600px
       &-bg
         background-position-y: -55px
 
@@ -586,9 +762,7 @@
   .brand
     &__main
       &-pers
-        top: 110px
-        height: 590px
-        right: -40%
+        height: 620px
       &-bg
         background-position-y: 0
 
@@ -596,9 +770,7 @@
   .brand
     &__main
       &-pers
-        top: 60px
         height: 590px
-        right: -39%
       &-bg
         background-position-y: -55px
 
@@ -616,9 +788,8 @@
         line-height: 15px
         margin-top: 10px
       &-pers
-        top: 40px
+        top: -24px
         height: 570px
-        right: -37%
       &-bg
         background-position-y: -80px
     &__footer
@@ -637,8 +808,6 @@
       &-slogan
         transform: scale(.9)
         transform-origin: left bottom
-      &-pers
-        right: -40%
     &__footer
       height: 145px
       &-bonus
@@ -648,7 +817,7 @@
       &-payments
         margin-top: -25px
 
-@media screen and (max-width: 320px) and (orientation: portrait)
+@media screen and (max-width: 340px) and (orientation: portrait)
   .brand
     &__main
       padding: 0 10px 10px
@@ -664,9 +833,7 @@
         line-height: 15px
         margin-top: 10px
       &-pers
-        top: 50px
-        height: 490px
-        right: -38%
+        height: 550px
       &-bg
         background-position-y: -50px
 
@@ -679,9 +846,17 @@
       &-left
         transform: scale(.5)
         bottom: 20px
+        .first-line
+          flex-direction: column
+          align-items: flex-start
       &-pers
-        height: 530px
-        right: 9%
+        height: 500px
+        right: 20%
+        left: auto
+      &-bird
+        height: 300px
+        top: 52%
+        right: -80px
       @keyframes zoomBg
         0%
           transform: scale(1) translateX(0)
@@ -723,12 +898,41 @@
       &-payment
         max-width: 180px
 
-@media screen and (max-width: 820px) and (orientation: landscape) and (max-height: 450px)
+@media screen and (max-width: 915px) and (orientation: landscape) and (max-height: 400px)
+  .brand
+    &__main
+      &-bird
+        height: 240px
+        top: 60%
+
+@media screen and (max-width: 915px) and (orientation: landscape) and (max-height: 370px)
   .brand
     &__main
       &-pers
-        right: 8%
-        height: 490px
+        height: 410px
+      &-bird
+        height: 250px
+        top: 53%
+        right: -40px
+
+@media screen and (max-width: 915px) and (orientation: landscape) and (max-height: 320px)
+  .brand
+    &__main
+      &-pers
+        height: 330px
+        right: 17%
+      &-bird
+        height: 190px
+        top: 53%
+        right: -10px
+
+
+//@media screen and (max-width: 820px) and (orientation: landscape) and (max-height: 450px)
+//  .brand
+//    &__main
+//      &-pers
+//        right: 8%
+//        height: 490px
 
 @media screen and (max-width: 770px) and (orientation: landscape) and (max-height: 450px)
   .brand
@@ -768,12 +972,28 @@
           margin-left: 4px
       &-payment
         max-width: 140px
+//
+//@media screen and (max-width: 720px) and (orientation: landscape) and (max-height: 450px)
+//  .brand
+//    &__main
+//      &-pers
+//        height: 430px
 
-@media screen and (max-width: 720px) and (orientation: landscape) and (max-height: 450px)
+@media screen and (max-width: 750px) and (orientation: landscape) and (max-height: 450px)
   .brand
     &__main
       &-pers
-        height: 430px
+        height: 460px
+        right: -5%
+        left: -13px
+
+@media screen and (max-width: 750px) and (orientation: landscape) and (max-height: 350px)
+  .brand
+    &__main
+      &-pers
+        height: 370px
+        left: 7px
+
 
 @media screen and (max-width: 650px) and (orientation: landscape) and (max-height: 450px)
   .brand
@@ -783,9 +1003,11 @@
       &-left
         transform: scale(.4)
       &-pers
-        height: 380px
+        height: 430px
+        right: -5%
+        left: -143px
 
-@media screen and (max-width: 570px) and (orientation: landscape) and (max-height: 450px)
+@media screen and (max-width: 575px) and (orientation: landscape) and (max-height: 450px)
   .brand
     &__main
       &-left
@@ -793,7 +1015,7 @@
       &-pers
         height: 350px
         right: 9%
-        top: -20px
+        left: -30px
     &__footer
       &-bonus
         transform: scale(.9)
