--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -1,3 +1,4 @@
+a(href='https://www.favbet.hr/hr/registracija/').main-link
 .brand
   .brand__main
     .brand__main-logo
@@ -9,7 +10,7 @@
           p ptice je uzbudljiv
         .second-line
           p kao #[span igranje] u Favbetu
-      a(href="#").brand__main-btn Kladi se
+      a(href="https://www.favbet.hr/hr/registracija/").brand__main-btn Kladi se
     picture.brand__main-pers
       source(media="(max-width: 600px) and (orientation: portrait)" srcset="img/pers-mob.png")
       source(media="(max-width: 920px) and (orientation: landscape) and (max-height: 450px)" srcset="img/pers-desk.png")
