--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -17,10 +17,14 @@ $font-wulkan: WulkanDisplay, sans-serif
   left: 0
   right: 0
 
+
 body
   background: $blue
 
 .brand
+  position: relative
+  z-index: 10
+  pointer-events: none
   width: 100%
   height: 100%
   overflow: hidden
@@ -90,6 +94,7 @@ body
         span
           font-family: $font-wulkan
     &-btn
+      pointer-events: initial
       margin-top: 30px
       font-family: $font-suisse-semb
       font-size: 24px
